syntax = "proto3";
package recipe;

service RecipeService {
rpc GetRecipe(RecipeRequest) returns (Recipe){}
rpc GetMetaData(Empty) returns (Meta){}
    }

message Recipe {

int32 id =1;
    string name = 2;
    }

message RecipeRequest {
int32 id =1;
    }

message Meta {
    int32 pid =2;
    }

message Empty {}



